[tool.poetry]
name = "semanticseek"
version = "0.1.0"
description = "Cybersecurity Standards SemanticSeek — Semantic search over cybersecurity standards documents using vector embeddings."
authors = ["Abdul Haseeb"]
license = "{ file = \"LICENSE\" }"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.4.7"
numpy = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
